@@ -1,15 +1,15 @@
-missing-parentheses-for-call-in-test:29:0:30:8::Using a conditional statement with potentially wrong function or method call due to missing parentheses:UNDEFINED
-missing-parentheses-for-call-in-test:35:0:36:8::Using a conditional statement with potentially wrong function or method call due to missing parentheses:UNDEFINED
-missing-parentheses-for-call-in-test:43:0:44:8::Using a conditional statement with potentially wrong function or method call due to missing parentheses:UNDEFINED
-missing-parentheses-for-call-in-test:51:0:52:8::Using a conditional statement with potentially wrong function or method call due to missing parentheses:UNDEFINED
-missing-parentheses-for-call-in-test:56:0:57:8::Using a conditional statement with potentially wrong function or method call due to missing parentheses:UNDEFINED
-missing-parentheses-for-call-in-test:64:0:65:8::Using a conditional statement with potentially wrong function or method call due to missing parentheses:UNDEFINED
-missing-parentheses-for-call-in-test:70:11:70:38::Using a conditional statement with potentially wrong function or method call due to missing parentheses:UNDEFINED
-missing-parentheses-for-call-in-test:72:17:72:42::Using a conditional statement with potentially wrong function or method call due to missing parentheses:UNDEFINED
-missing-parentheses-for-call-in-test:73:18:73:46::Using a conditional statement with potentially wrong function or method call due to missing parentheses:UNDEFINED
-missing-parentheses-for-call-in-test:75:0:None:None::Using a conditional statement with potentially wrong function or method call due to missing parentheses:UNDEFINED
-missing-parentheses-for-call-in-test:76:0:None:None::Using a conditional statement with potentially wrong function or method call due to missing parentheses:UNDEFINED
-missing-parentheses-for-call-in-test:79:0:None:None::Using a conditional statement with potentially wrong function or method call due to missing parentheses:UNDEFINED
-missing-parentheses-for-call-in-test:80:0:None:None::Using a conditional statement with potentially wrong function or method call due to missing parentheses:UNDEFINED
-missing-parentheses-for-call-in-test:85:0:86:8::Using a conditional statement with potentially wrong function or method call due to missing parentheses:UNDEFINED
-missing-parentheses-for-call-in-test:91:0:92:8::Using a conditional statement with potentially wrong function or method call due to missing parentheses:UNDEFINED
+missing-parentheses-for-call-in-test:29:3:29:16::Using a conditional statement with potentially wrong function or method call due to missing parentheses:UNDEFINED
+missing-parentheses-for-call-in-test:35:3:35:19::Using a conditional statement with potentially wrong function or method call due to missing parentheses:UNDEFINED
+missing-parentheses-for-call-in-test:43:3:43:23::Using a conditional statement with potentially wrong function or method call due to missing parentheses:UNDEFINED
+missing-parentheses-for-call-in-test:51:5:51:25::Using a conditional statement with potentially wrong function or method call due to missing parentheses:UNDEFINED
+missing-parentheses-for-call-in-test:56:3:56:14::Using a conditional statement with potentially wrong function or method call due to missing parentheses:UNDEFINED
+missing-parentheses-for-call-in-test:64:3:64:17::Using a conditional statement with potentially wrong function or method call due to missing parentheses:UNDEFINED
+missing-parentheses-for-call-in-test:70:17:70:30::Using a conditional statement with potentially wrong function or method call due to missing parentheses:UNDEFINED
+missing-parentheses-for-call-in-test:72:23:72:34::Using a conditional statement with potentially wrong function or method call due to missing parentheses:UNDEFINED
+missing-parentheses-for-call-in-test:73:24:73:38::Using a conditional statement with potentially wrong function or method call due to missing parentheses:UNDEFINED
+missing-parentheses-for-call-in-test:75:26:75:39::Using a conditional statement with potentially wrong function or method call due to missing parentheses:UNDEFINED
+missing-parentheses-for-call-in-test:76:26:76:37::Using a conditional statement with potentially wrong function or method call due to missing parentheses:UNDEFINED
+missing-parentheses-for-call-in-test:79:26:79:40::Using a conditional statement with potentially wrong function or method call due to missing parentheses:UNDEFINED
+missing-parentheses-for-call-in-test:80:26:80:42::Using a conditional statement with potentially wrong function or method call due to missing parentheses:UNDEFINED
+missing-parentheses-for-call-in-test:85:3:85:26::Using a conditional statement with potentially wrong function or method call due to missing parentheses:UNDEFINED
+missing-parentheses-for-call-in-test:91:3:91:20::Using a conditional statement with potentially wrong function or method call due to missing parentheses:UNDEFINED
